creating other containers and fixing mistakes

--- a/style.css
+++ b/style.css
@@ -3,14 +3,23 @@
 }
 
 .container {
-    background: black;
+    display: flex;
+    flex-direction: row;
+}
+
+.container2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.container3 {
     display: flex;
     flex-direction: row;
 }
 
 .box {
     width: 200px;
-    padding: 40px;
+    padding: 35px;
     color: white;
     font-family: Poppins, "Helvetica Neue", Arial, sans-serif;
     font-size: 1.5em;
@@ -49,11 +58,13 @@
     background-color: #e84c3e;
 }
 
-.box9 {
+.container .box9,
+.container3 .box9 {
     background-color: #95a5a5;
 }
 
-.box10 {
+.container .box10,
+.container3 .box10 {
     background-color: #7e8c8d;
 }
 
